updated DB
Updated DB for user contracts and stuff
